--- a/Ecommerce.API/Ecommerce.API.csproj
+++ b/Ecommerce.API/Ecommerce.API.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.Domain\Ecommerce.Domain.csproj" />
-    <ProjectReference Include="..\Ecommerce.Service\Ecommerce.Service.csproj" />
+    <ProjectReference Include="..\Ecommerce.Service\Ecommerce.Business.csproj" />
   </ItemGroup>
 
 </Project>
