Rename from Ecommerce to Product

--- a/Ecommerce.API/Product.API.csproj
+++ b/Ecommerce.API/Product.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,12 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ecommerce.Domain\Ecommerce.Domain.csproj" />
-    <ProjectReference Include="..\Ecommerce.Service\Ecommerce.Business.csproj" />
+    <ProjectReference Include="..\Ecommerce.Domain\Product.Domain.csproj" />
+    <ProjectReference Include="..\Ecommerce.Service\Product.Business.csproj" />
   </ItemGroup>
 
 </Project>
