--- a/Ecommerce.Service/Product.Business.csproj
+++ b/Ecommerce.Service/Product.Business.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ecommerce.Domain\Ecommerce.Domain.csproj" />
-    <ProjectReference Include="..\Ecommerce.Infrastructure\Ecommerce.Data.csproj" />
+    <ProjectReference Include="..\Ecommerce.Domain\Product.Domain.csproj" />
+    <ProjectReference Include="..\Ecommerce.Infrastructure\Product.Data.csproj" />
   </ItemGroup>
 
 </Project>
