--- a/Ecommerce.Infrastructure/ProductWarehouse.Data.csproj
+++ b/Ecommerce.Infrastructure/ProductWarehouse.Data.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ecommerce.Domain\Product.Domain.csproj" />
+    <ProjectReference Include="..\Ecommerce.Domain\ProductWarehouse.Domain.csproj" />
   </ItemGroup>
 
 </Project>
