Add product controller

--- a/Ecommerce.API/ProductWarehouse.API.csproj
+++ b/Ecommerce.API/ProductWarehouse.API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Ecommerce.Service\ProductWarehouse.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
